fixed footer z-index

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -12,7 +12,7 @@
 .background-footer{
     position:relative;
     bottom:500px;
-    z-index:100;
+    z-index:-100;
     width:100%;
     height:440px;
     background-repeat: no-repeat;
